--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <a href="commentlist.html">commentlist</a>
   <a href="covidtracker.html">covidtracker</a>
   <a href="qrcode.html">QR make</a>
+  <a href="binaryconverter.html">binaryconverter</a>
   <a href="dynamicgradient.html">dynamicgradient</a>
   <a href="allgradients.html">allgradients</a>
   <a href="guessnumber.html">guessnumber</a>
