--- a/checkNeumorphic.html
+++ b/checkNeumorphic.html
@@ -15,9 +15,8 @@
   }
 
   .neumorphic {
-    height: 100px;
-    width: 100px;
-
+    height: 200px;
+    width: 200px;
     border-radius: 50%;
     background: #55b9f3;
     box-shadow: 13px 13px 23px #489dcf, -13px -13px 23px #62d5ff;
@@ -28,6 +27,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 5px 5px 30px #e9e9e8;
+    padding: 0 50px;
   }
 
   .grid {
@@ -35,14 +36,20 @@
     height: 100px;
     display: grid;
     position: relative;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 
   .suare {
     margin: 1px;
     background: red;
   }
+
+  input[type="radio"] {
+    /* opacity: 0; */
+  }
+
+
 
   .suare.active {
     background: green;
@@ -68,11 +75,16 @@
   input {
     margin-bottom: 10px;
   }
+
+  section {
+    width: 100%;
+    height: 100vh;
+  }
 </style>
 
 <body>
-
-  <div class="neumorphic"></div>
+  <div class="neumorphic">
+  </div>
   <div class="neubtn">
     <input type="color" name="" id="newcolor">
     <label for="neuDistance">Size: <span id="nsizeval">0</span></label>
@@ -85,10 +97,32 @@
     <label for="neuBlur">Blur: <span id="nBlurval">0</span></label>
     <input class="range" type="range" name="" min="0" value="0" max="100" id="neublur">
     <div class="grid">
-      <div id="stleft" class="suare active"></div>
-      <div id="stright" class="suare"></div>
-      <div id="sbleft" class="suare"></div>
-      <div id="sbright" class="suare"></div>
+      <label for="stleft" class="suare">
+      </label>
+      <input type="radio" name="checks" value="abxy" id="stleft" class="suareR">
+      <label for="sbleft" class="suare">
+      </label>
+      <input type="radio" name="checks" value="axby" id="sbleft" class="suareR">
+      <label for="sbright" class="suare">
+      </label>
+      <input type="radio" name="checks" value="aybx" id="sbright" class="suareR">
+      <label for="stright" class="suare">
+      </label>
+      <input type="radio" name="checks" value="axyb" id="stright" class="suareR">
+    </div>
+    <div class="grid">
+      <label for="stleft" class="suare">
+      </label>
+      <input type="radio" name="checkss" value="normal" id="stleft" class="suareS">
+      <label for="stright" class="suare">
+      </label>
+      <input type="radio" name="checkss" value="inset" id="stright" class="suareS">
+      <label for="sbleft" class="suare">
+      </label>
+      <input type="radio" name="checkss" value="lgab" id="sbleft" class="suareS">
+      <label for="sbright" class="suare">
+      </label>
+      <input type="radio" name="checkss" value="lgba" id="sbright" class="suareS">
     </div>
     <select name="" id="neuShadow">
       <option value="abxy">normal</option>
@@ -97,14 +131,13 @@
       <option value="aybx">/diagonal</option>
     </select>
     <select name="" id="neuShape">
-      <option value="bahira">bahira</option>
+      <option value="normal">bahira</option>
       <option value="inset">bhitra</option>
       <option value="lgab">concave</option>
       <option value="lgba">uncave</option>
     </select>
 
   </div>
-
   <script src="colorchange.js"></script>
   <script>
     neubtn = document.querySelector(".neubtn")
@@ -118,7 +151,13 @@
     neuSize = neubtn.querySelector("#neuSize")
     neuint = neubtn.querySelector("#neuint")
     neuDistance = neubtn.querySelector("#neuDistance")
-    suares = neubtn.querySelectorAll(".suare")
+    suareRs = neubtn.querySelectorAll(".suareR")
+    suareSs = neubtn.querySelectorAll(".suareS")
+    const tldeg = 145;
+    const trdeg = 225
+    const brdeg = 315;
+    const bldeg = 45;
+    let shadowdeg = 145;
 
     let nblur = 23;
     let ndis = 0;
@@ -127,69 +166,89 @@
     let nsize = 13;
     let ncolor = "#55b9f3";
     let ncolorx = hexToHsl(ncolor, nint);
-    let ncolory = hexToHsl(ncolor, 0 - nint);
-    let nshape, nshadow;
+    let ncolory = hexToHsl(ncolor, Math.floor(nint * .5));
+    let nshape = "normal";
+    let nshadow = "normal";
+    putValue(neublur, nblur);
+    putValue(neuSize, nsize);
+    putValue(neuDistance, nsize);
+    putValue(neuint, nint);
+    putValue(newcolor, ncolor);
 
-    suares.forEach(s => {
+    function putValue(ele, val) {
+      ele.value = val;
+    }
+    suareRs.forEach(s => {
       s.addEventListener("click", () => {
-        if (s.classList.contains("active")) {
-          s.classList.remove("active")
+        setNeuMorphic(neumorphic, selectShadow(s.value, ""), nrad, selectShape(nshape))
+        if (s.previousElementSibling.classList.contains("active")) {
+          s.previousElementSibling.classList.remove("active")
         } else {
-          s.classList.add("active")
+          s.previousElementSibling.classList.add("active")
         }
       })
     })
-
-    document.querySelectorAll(".range").forEach(range => {
-      range.addEventListener("change", () => {
-        setNeuMorphic(neumorphic, selectShadow(neuShadow.value), nrad, ncolor)
+    suareSs.forEach(s => {
+      s.addEventListener("click", () => {
+        setNeuMorphic(neumorphic, selectShadow(neuShadow.value, ""), nrad, selectShape(s.value))
       })
     })
+
+
     newcolor.addEventListener("change", () => {
-      neumorphic.style.backgroundColor = ncolor;
       ncolor = newcolor.value;
+      neumorphic.style.backgroundColor = ncolor;
       document.body.style.backgroundColor = ncolor;
       ncolorx = hexToHsl(ncolor, nint);
       ncolory = hexToHsl(ncolor, 0 - nint);
+      setNeuMorphic(neumorphic, selectShadow(neuShadow.value, ""), nrad, selectShape(nshape))
+
     })
     neuborder.addEventListener("change", () => {
       nrad = neuborder.value;
-      console.log(nrad)
+      // console.log(nrad)
       neubtn.querySelector("#nborderval").innerHTML = nrad;
+      setNeuMorphic(neumorphic, selectShadow(neuShadow.value, ""), nrad, selectShape(nshape))
+
     })
     neuDistance.addEventListener("change", () => {
       nsize = neuDistance.value;
       neubtn.querySelector("#nsizeval").innerHTML = nsize;
-      console.log(nsize)
+      // console.log(nsize)
 
     })
     neuint.addEventListener("change", () => {
       nint = neuint.value;
-      console.log(nint)
+      // console.log(nint)
       neubtn.querySelector("#nintval").innerHTML = nint;
       ncolorx = hexToHsl(ncolor, nint);
       ncolory = hexToHsl(ncolor, 0 - nint);
+      setNeuMorphic(neumorphic, selectShadow(neuShadow.value, ""), nrad, selectShape(nshape))
+
     })
     neuSize.addEventListener("change", () => {
-      nsize = neusize.value;
+      nsize = neuSize.value;
       neubtn.querySelector("#nsizeval").innerHTML = nsize;
-      console.log(nsize)
+      // console.log(nsize)
+      setNeuMorphic(neumorphic, selectShadow(neuShadow.value, ""), nrad, selectShape(nshape))
 
     })
     neublur.addEventListener("change", () => {
       nblur = neublur.value;
-      console.log(nblur)
+      // console.log(nblur)
       neubtn.querySelector("#nBlurval").innerHTML = nblur;
+      setNeuMorphic(neumorphic, selectShadow(neuShadow.value, ""), nrad, selectShape(nshape))
+
     })
     neuShadow.addEventListener("change", () => {
       // neuShadow = neubtn.querySelector("#neuShadow").value;
       nshadow = neuShadow.value;;
+      setNeuMorphic(neumorphic, selectShadow(nshadow, ""), nrad, selectShape(nshape));
     })
     neuShape.addEventListener("change", () => {
       // neuShadow = neubtn.querySelector("#neuShadow").value;
-      // setNeuMorphic(neumorphic, selectShadow(neuShadow.value), nrad, ncolor);
       nshape = neuShape.value
-      neumorphic.style.background = selectShape(nshape)
+      setNeuMorphic(neumorphic, selectShadow(neuShadow.value, ""), nrad, selectShape(nshape));
     })
 
     function setBoxShadow(ele, bshadow) {
@@ -202,46 +261,66 @@
 
     function setNeuMorphic(element, selectedshadow, rad, color) {
       element.style.borderRadius = `${rad}%`;
-      element.style.background = selectShape(element);
+      element.style.background = color;
       element.style.boxShadow = selectedshadow;
+      codetext = `border-radius:${rad}%;
+      background:${color};
+      box-shadow:${selectedshadow}`;
+      console.clear()
+      console.log(codetext)
     }
 
-    function selectShadow(ele) {
+    function addMinutes(date, minutes) {
+      //   var d = new Date();
+      // d.setHours(15);
+      return new Date(date.getTime() + minutes * 60000);
+    }
+
+    function selectShadow(ele, inset) {
       switch (ele) {
         case "abxy":
-          console.log("normal")
-          return `${nsize}px ${nsize}px ${nblur}px ${ncolorx}, ${0-nsize}px ${0-nsize}px ${nblur}px ${ncolory}`
+          // console.log("normal")
+          shadowdeg = tldeg;
+          return `${inset} ${nsize}px ${nsize}px ${nblur}px ${ncolorx},${inset} ${0-nsize}px ${0-nsize}px ${nblur}px ${ncolory}`
           break;
         case "axyb":
-          console.log("inset")
-          return `${0-nsize}px ${0-nsize}px ${nblur}px ${ncolorx}, ${nsize}px ${nsize}px ${nblur}px ${ncolory}`
+          // console.log("inset")
+          shadowdeg = trdeg;
+          return `${inset} ${0-nsize}px ${0-nsize}px ${nblur}px ${ncolorx},${inset} ${nsize}px ${nsize}px ${nblur}px ${ncolory}`
           break;
         case "axby":
-          console.log("axby")
-          return `${0-nsize}px ${nsize}px ${nblur}px ${ncolorx}, ${nsize}px ${0-nsize}px ${nblur}px ${ncolory}`
+          // console.log("axby")
+          shadowdeg = bldeg;
+          return `${inset} ${0-nsize}px ${nsize}px ${nblur}px ${ncolorx},${inset} ${nsize}px ${0-nsize}px ${nblur}px ${ncolory}`
           break;
         case "aybx":
-          console.log("aybx")
-          return `${nsize}px ${0-nsize}px ${nblur}px ${ncolorx}, ${0-nsize}px ${nsize}px ${nblur}px ${ncolory}`
+          shadowdeg = brdeg;
+          // console.log("aybx")
+          return `${inset} ${nsize}px ${0-nsize}px ${nblur}px ${ncolorx},${inset} ${0-nsize}px ${nsize}px ${nblur}px ${ncolory}`
           break;
         default:
-          return `${nsize}px ${nsize}px ${nblur}px ${ncolorx}, ${0-nsize}px ${0-nsize}px ${nblur}px ${ncolory}`
+          return `${inset} ${nsize}px ${nsize}px ${nblur}px ${ncolorx},${inset} ${0-nsize}px ${0-nsize}px ${nblur}px ${ncolory}`
       }
     }
 
     function selectShape(ele) {
       switch (ele) {
         case "lgab":
-          return `linear-gradient(145deg,${ncolorx},  ${ncolory})`
+          return `repeating-linear-gradient(${shadowdeg}deg,${ncolorx},${ncolory})`
           break;
         case "lgba":
-          return `linear-gradient(145deg,${ncolory},  ${ncolorx})`
+          return `repeating-linear-gradient(${shadowdeg}deg,${ncolory},${ncolorx})`
           break;
         case "inset":
-          return selectShadow(ele, "inset");
+          setBoxShadow(neumorphic, selectShadow(ele, "inset"));
+          return ncolor;
+          break;
+        case "normal":
+          setBoxShadow(neumorphic, selectShadow(ele, ""));
+          return ncolor;
           break;
         default:
-          return ` ${nsize}px ${nsize}px ${nblur}px ${ncolorx}, ${0-nsize}px ${0-nsize}px ${nblur}px ${ncolory}`
+          return `default ${nsize}px ${nsize}px ${nblur}px ${ncolorx}, ${0-nsize}px ${0-nsize}px ${nblur}px ${ncolory}`
       }
     }
   </script>
