--- a/transpose2.html
+++ b/transpose2.html
@@ -97,6 +97,8 @@
   <script type="text/javascript" src="varnotes2.js">
   </script>
   <script>
+    // notex = notex + raagnotes;
+
     var btn = document.getElementById("toggle");
     var menu = document.getElementById("menu");
     btn.addEventListener("click", toggleMenu)
@@ -115,7 +117,7 @@
   <script src="../../htmltocanvas.min.js"></script>
   <script>
     document.addEventListener("keyup", (e) => {
-      if (e.keyCode == 67) {
+      if (e.keyCode == 67 && e.keyCode == 16) {
         console.log(e.key, songs.value)
         html2canvas(document.querySelector("#capture")).then(canvas => {
           document.body.appendChild(canvas)
@@ -155,7 +157,6 @@
       bcde = abcd.split("")
       bcde.forEach((cdef, index) => {
         if (cdef.includes("#")) {
-          // console.log(index)
           defg.push(index)
 
         }
@@ -171,9 +172,7 @@
 
       w = 0;
       for (i = 0; i < defg.length; i++) {
-        // console.log(defg[i], w, bcde)
         bcde.splice(defg[i] - w, 1)
-        // console.log(defg[i], w, bcde)
         w++;
       }
       return bcde.join().split(",");
@@ -185,6 +184,7 @@
     const Ckey = ["c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "-"];
     const Nepnotes = ["सा", "रेे।", "रे", "ग|", "ग", "म", "म।", "प", "ध।", "ध", "नि।", "नि", "-"];
     const Newanotes = ["न", "माे।", "माे", "बा।", "बा।", "गे", "म।", "साे", "ध।", "रा", "नि।", "क", "-"];
+    const solfege = ["do", "re।", "re", "mi।", "mi", "fa", "so।", "so", "la।", "la", "ti।", "ti", "-"];
     const Cskey = ["c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "c", "-"];
     const Dkey = ["d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "c", "c#", "-"];
     const Dskey = ["d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "c", "c#", "d", "-"];
@@ -211,6 +211,8 @@
       songl.addEventListener("click", (e) => {
         songlid = songl.id
         document.querySelector("#titlename").innerHTML = songlid
+        songlid2 = songlid
+        alert("herum" + eval(songlid2.replace('.note', '.beat')), songlid);
         songlid.replace("note.", "")
         if (cursongtwo == "") {
           cursongtwo = songlid;
@@ -219,16 +221,19 @@
           cursongtwo = songlid;
         }
         songl.className = "active"
+        // alert("herum" + eval(songlid2.replace('.note', '.key')));
         transpose(eval(songlid), eval(songkey.value + "key"))
       });
     })
     document.querySelector("#notesearch").addEventListener("keyup", (e) => {
       noteserchval = document.querySelector("#notesearch").value;
-      transpose(eval("note." + noteserchval.replaceAll(" ", "")), eval(songkey.value + "key"))
+      transpose(eval("notex." + noteserchval.replaceAll(" ", "") + ".note"), eval(songkey.value + "key"))
     })
     songs.addEventListener("change", () => {
+      // a = song.value;
+      // alert("herum" + a.replace('.note', '.key'));
       document.querySelector("#titlename").innerHTML = songs.value
-
+      // songkey.value=""
       transpose(eval(songs.value), eval(songkey.value + "key"))
     });
     songkey.addEventListener("change", () => {
@@ -293,6 +298,7 @@
         }
       }
       // hello
+      maketable();
       tabledisplay(newscale);
       // return newscale;
     }
@@ -329,14 +335,15 @@
         }
       }
       totranspose = newscale;
+      maketable();
       tabledisplay(newscale);
       return newscale;
     }
 
     function tabledisplay(na) {
-      console.log("html")
+      console.log("html");
 
-      maketable();
+      // maketable();
       count = 0;
       tbody = document.querySelector('.tbody');
       for (i = 0; i < na.length; i++) {
